# design-review

./: .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  main.py  pyproject.toml  render.yaml
core/: database.py  drive_client.py  feedback_service.py  models.py  sheet_parser.py
docs/: index.html
docs/js/: app.js  feedback-panel.js  sheet-parser.js  storage.js  video-player.js
static/: index.html
static/css/: app.css
static/js/: api.js  app.js  feedback-panel.js  video-player.js
